# orca

./: .dockerignore  .env.example  .gitignore  API.md  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
backend/: config.py  crud.py  main.py
backend/agents/: __init__.py  base.py  drive.py  gcal.py  gmail.py
backend/api/: deps.py  routes_auth.py  routes_conversations.py  routes_login.py  routes_query.py  routes_sync.py  routes_tasks.py  routes_users.py  ws.py
backend/context/: conversation.py
backend/core/: security.py
backend/db/: models.py  session.py
backend/embeddings/: base.py  chunkers.py  embedder.py  modal_bge.py  reranker.py  search.py
backend/eval/: evaluate.py  golden_set.json
backend/features/: conflict.py
backend/llm/: base.py  client.py  json_utils.py  modal_qwen.py
backend/migrations/: env.py
backend/orchestration/: executor.py
backend/providers/: factory.py
backend/scripts/: export_openapi.py  seed.py  seed_users.py
backend/synth/: synthesizer.py
backend/testing/: fakes.py
docs/: Assignment 10_30 Foresight.txt  DATA_INGESTION.md  FRONTEND_PLAN.md  PLAN.md  implement_providers.md  sample_queries.md  verification_live.md
frontend/: .gitignore  README.md  openapi.json  package-lock.json  package.json  react-router.config.ts  tsconfig.json  vite.config.ts  wrangler.jsonc
scripts/: dev.sh  export_openapi.py  seed.py  verify_live.sh
tests/: conftest.py  test_auth_oauth_qa.py  test_auth_qa.py  test_classifier_qa.py  test_conflict_qa.py  test_context_qa.py  test_conversation_routes_qa.py  test_eval_qa.py  test_executor_qa.py  test_google_providers_qa.py  test_json_serializer_qa.py  test_llm_qa.py  test_modal_bge_embedder.py  test_modal_qwen_adapter.py  test_pipeline_qa.py  test_planner_qa.py  test_query_routes_qa.py  test_search_qa.py  test_smoke.py  test_sync_qa.py  test_synth_qa.py  test_temporal_qa.py  test_ws_qa.py
(+85 files in other folders)
