[project]
name = "google-assistant-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.19",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "openai>=1.40",
    "pyjwt>=2.8",
    "pwdlib[argon2,bcrypt]>=0.2",
    "anyio>=4.0",
    "asgiref>=3.8",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "tzdata>=2024",
    # Phase 2 Google providers — imported lazily so the mock/offline path and
    # CPU-only image never load them.
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=0.24",
    "anyio[trio]>=4.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

# uv installs the `dev` dependency-group by default on `uv sync`, so the dev
# tools above (pytest, ruff, ...) are present without `--extra dev`. The
# optional-dependencies table is kept as the declarative source of truth.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=0.24",
    "anyio[trio]>=4.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = ["llm: requires live GEMINI_STUDIO_API_KEY (deselect with -m 'not llm')"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Alembic migrations are generated-style DDL; long op.create_table lines are idiomatic.
"backend/migrations/versions/*" = ["E501"]
# conftest MUST set TESTING/SECRET_KEY/EMBED_MODE env before importing backend.
"tests/conftest.py" = ["E402"]
